--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,109 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App {
+  text-align: center;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.crud
+{
+  text-align: center;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar 
+{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  list-style: none;
+  background-color: rgb(74, 10, 90);
+  
+  font-size: 1.8em;
+  color: white;
+  
+ 
+ 
+}
+.navbar li{
+  margin: 0 1em;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.navbar :hover
+{
+  background-color: yellow;
+}
+a
+{
+  text-decoration: none;
+}
+h1{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 5em;
+  background-color: blueviolet;
+  color: azure;
+ 
+}
+.signup
+{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 80vh;
+  background-color: yellow;
+}
+.container
+{
+  width: 450px;
+  border-radius: 5px;
+  box-shadow: 0 2px 10px green;
+}
+.imgcon
+{
+  display: flex;
+  flex-wrap: wrap;
+}
+.main {
+  padding: 5%;
+  text-align: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* input {
+  padding: 1%;
+  width: 50%;
+  margin: 1% 2%;
 }
+
+button {
+  font-weight: bold;
+  background: red;
+  border: none;
+  color: white;
+  padding: 1%;
+} */
+
+
+
+.btn
+{
+  margin: 10px;
+}
+.cartcontain
+{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  row-gap: 10px;
+}
+.buttonimage
+{
+
+  height: 300px;
+ top: 50px;
+ overflow-x: hidden;
+  background-color: blueviolet;
+  
+
+}
+Card.Img
+{
+  width: 25px;
+  height: 25px;
+}
+
+
