--- a/src/componant/QuizApp/quiz.css
+++ b/src/componant/QuizApp/quiz.css
@@ -2,7 +2,7 @@
 
 body {
   font-family: 'Anek Malayalam', sans-serif;
-  background: linear-gradient(90.04deg, #800080 0.03%, #ffc0cb 99.96%);
+  
   color: #11052c;
   display: flex;
   justify-content: center;
@@ -12,8 +12,9 @@ body {
 
 .quiz-container {
   max-width: 500px;
+  
   min-width: 250px;
-  background: #ffffff;
+  background: #d6aed6;
   border-radius: 4px;
   margin-top: 100px;
   padding: 30px 60px;
@@ -28,7 +29,7 @@ body {
 .quiz-container .total-question {
   font-size: 16px;
   font-weight: 500;
-  color: #e0dee3;
+  color: #f6f5f8;
 }
 
 .quiz-container h2 {
@@ -47,7 +48,7 @@ body {
   list-style: none;
   color: #2d264b;
   font-size: 16px;
-  background: #ffffff;
+  background: #faf8f8;
   border: 1px solid #eaeaea;
   border-radius: 16px;
   padding: 11px;
@@ -56,8 +57,8 @@ body {
 }
 
 .quiz-container ul .selected-answer {
-  background: #ffd6ff;
-  border: 1px solid #800080;
+  background: #58964f;
+  border: 1px solid #faf2f2;
 }
 
 .quiz-container button {
